Rearrange annotations metadata somewhat

--- a/template/include/annotation-blockquote-inside.tmpl
+++ b/template/include/annotation-blockquote-inside.tmpl
@@ -9,17 +9,7 @@
 		   <{titleLinkIconMetadata}>
 			   ><{fullTitleHTML}></a>\
 		<[IF secondaryTitleLinksHTML]><span class="secondary-title-links"><{secondaryTitleLinksHTML}></span><[IFEND]>\
-		<[IF abstract & ![ archiveURL | authorDateAux ] ]>:<[IFEND]>\
-
-		<[IF archiveURL]>
-		<span class="archiveURL">[<a
-			 title="Link to local archive for <{titleText}>"
-			 href="<{archiveURL}>"
-			 <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
-			 alt="Locally archived version of this URL"
-				 ><{archiveURLText}></a>]</span>
-		<[IFEND]>\
-
+		<[IF abstract & !authorDateAux ]>:<[IFEND]>\
 		<[IF authorDateAux]><[IF2 author | date]>,\ <[IF2END]><{authorDateAux}><[IF2 abstract]>:<[IF2END]><[IFEND]>
 	</p>
 	<[IF abstract]>
