--- a/template/include/annotation-blockquote-outside.tmpl
+++ b/template/include/annotation-blockquote-outside.tmpl
@@ -8,17 +8,7 @@
 		   <[IF titleLinkDataAttributes]><{titleLinkDataAttributes}><[IFEND]>
 		   <{titleLinkIconMetadata}>
 			   ><{titleHTML}></a>\
-		<[IF secondaryTitleLinksHTML]><span class="secondary-title-links"><{secondaryTitleLinksHTML}></span><[IFEND]>\
-
-		<[IF archiveURL]>
-		<span class="archiveURL">[<a
-			 title="Link to local archive for <{titleText}>"
-			 href="<{archiveURL}>"
-			 <[IF2 linkTarget]>target="<{linkTarget}>"<[IF2END]>
-			 alt="Locally archived version of this URL"
-				 ><{archiveURLText}></a
-		>]</span>
-		<[IFEND]>
+		<[IF secondaryTitleLinksHTML]><span class="secondary-title-links"><{secondaryTitleLinksHTML}></span><[IFEND]>
 	</p>
 	<[IF authorDateAux]>
 	<p class="data-field author-date-aux"><{authorDateAux}></p>
