Minor tweaks to popin title bar button styling

--- a/css/colors-dark-GENERATED.css
+++ b/css/colors-dark-GENERATED.css
@@ -258,7 +258,7 @@
     --GW-popins-popin-backdrop-color: rgba(255, 255, 255, 0.4);
     --GW-popins-box-shadow-color: #7c7c7c;
     --GW-popins-popin-title-bar-background-color: #000;
-    --GW-popins-popin-title-bar-button-color: #999;
+    --GW-popins-popin-title-bar-button-color: #a6a6a6;
     --GW-popins-popin-scrollbar-thumb-color: #5c5c5c;
     --GW-popins-popin-scrollbar-thumb-hover-color: #8b8b8b;
     --GW-popins-popin-stack-counter-text-color: #000;
