--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -259,7 +259,7 @@
     --GW-popins-popin-backdrop-color: rgba(0, 0, 0, 0.4);
     --GW-popins-box-shadow-color: #aaa;
     --GW-popins-popin-title-bar-background-color: #fff;
-    --GW-popins-popin-title-bar-button-color: #888;
+    --GW-popins-popin-title-bar-button-color: #777;
     --GW-popins-popin-scrollbar-thumb-color: #ccc;
     --GW-popins-popin-scrollbar-thumb-hover-color: #999;
     --GW-popins-popin-stack-counter-text-color: #fff;
@@ -590,7 +590,7 @@
     --GW-popins-popin-backdrop-color: rgba(255, 255, 255, 0.4);
     --GW-popins-box-shadow-color: #7c7c7c;
     --GW-popins-popin-title-bar-background-color: #000;
-    --GW-popins-popin-title-bar-button-color: #999;
+    --GW-popins-popin-title-bar-button-color: #a6a6a6;
     --GW-popins-popin-scrollbar-thumb-color: #5c5c5c;
     --GW-popins-popin-scrollbar-thumb-hover-color: #8b8b8b;
     --GW-popins-popin-stack-counter-text-color: #000;
@@ -692,6 +692,8 @@
     --GW-popups-popup-title-bar-pattern-focused: var(--GW-image-pattern-dotted-161616-on-3e3e3e-2x-gif);
 
 	--GW-popins-popin-backdrop-color: rgba(0, 0, 0, 0.6);
+
+	--GW-popins-popin-title-bar-button-color: #bbb;
 
     --GW-dotted-underline-background-image: var(--GW-image-linear-dotted-fff-transparent-2x-gif);
     --GW-dotted-underline-hover-background-image: var(--GW-image-linear-dotted-bbb-transparent-2x-gif);
@@ -908,6 +910,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1699895812">
-<script src="/static/js/head.js?v=1699895812"></script>
-<link rel="preload" href="/static/img/icon/icons.svg?v=1699647489" as="image">
+<link rel="stylesheet" href="/static/css/head.css?v=1699985094">
+<script src="/static/js/head.js?v=1699985094"></script>
+<link rel="preload" href="/static/img/icon/icons.svg?v=1699985093" as="image">
