--- a/css/dark-mode-GENERATED.css
+++ b/css/dark-mode-GENERATED.css
@@ -258,7 +258,7 @@
     --GW-popins-popin-backdrop-color: rgba(255, 255, 255, 0.4);
     --GW-popins-box-shadow-color: #7c7c7c;
     --GW-popins-popin-title-bar-background-color: #000;
-    --GW-popins-popin-title-bar-button-color: #999;
+    --GW-popins-popin-title-bar-button-color: #a6a6a6;
     --GW-popins-popin-scrollbar-thumb-color: #5c5c5c;
     --GW-popins-popin-scrollbar-thumb-hover-color: #8b8b8b;
     --GW-popins-popin-stack-counter-text-color: #000;
@@ -360,6 +360,8 @@
     --GW-popups-popup-title-bar-pattern-focused: var(--GW-image-pattern-dotted-161616-on-3e3e3e-2x-gif);
 
 	--GW-popins-popin-backdrop-color: rgba(0, 0, 0, 0.6);
+
+	--GW-popins-popin-title-bar-button-color: #bbb;
 
     --GW-dotted-underline-background-image: var(--GW-image-linear-dotted-fff-transparent-2x-gif);
     --GW-dotted-underline-hover-background-image: var(--GW-image-linear-dotted-bbb-transparent-2x-gif);
