--- a/css/default.css
+++ b/css/default.css
@@ -4561,17 +4561,16 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .popin .popframe-title-bar-button svg {
     max-width: 100%;
     max-height: 100%;
-    width: 24px;
-    height: 24px;
+    width: 100%;
+    height: 100%;
 }
 
 .popin .popframe-title-bar-button.extracts-disable-button {
-    padding: 5px;
+    padding: 3px;
     margin: 0 0 0 2px;
 }
 .popin .popframe-title-bar-button.close-button {
-    padding: 4px;
-    opacity: 0.85;
+    padding: 2px;
 }
 
 /*  Popin stack counter.
