--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2309,18 +2309,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5213,14 +5213,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5361,7 +5361,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5624,17 +5624,16 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .popin .popframe-title-bar-button svg {
     max-width: 100%;
     max-height: 100%;
-    width: 24px;
-    height: 24px;
+    width: 100%;
+    height: 100%;
 }
 
 .popin .popframe-title-bar-button.extracts-disable-button {
-    padding: 5px;
+    padding: 3px;
     margin: 0 0 0 2px;
 }
 .popin .popframe-title-bar-button.close-button {
-    padding: 4px;
-    opacity: 0.85;
+    padding: 2px;
 }
 
 /*  Popin stack counter.
@@ -5822,14 +5821,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6732,7 +6731,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#question');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7298,7 +7297,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1699647489#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1699985093#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7373,7 +7372,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1699647489#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
