default.html: rm smallcaps capitalization from anonymous-feedback footer; we don't capitalize anywhere else in pages or popups right now, so it's inconsistent

--- a/template/default.html
+++ b/template/default.html
@@ -146,7 +146,7 @@
           </section>$endif$
         $if(linkbibYes)$<section id="link-bibliography-section" class="level1 collapse">
           <h1 class="collapse"><a href="#link-bibliography-section" title="Link to section: § 'Link Bibliography'">Link Bibliography</a></h1> <!-- NOTE: In theory, '.collapse' on a '<h1>' is redundant with the '<section>'; but added to parallel Pandoc-generated headers which set all attributes/classes on both. -->
-          <a id="link-bibliography" href="/metadata/annotation/link-bibliography/$escapedURL$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include link-bibliography">[bibliography of links/references used in page]</a>$endif$
+          <a id="link-bibliography" href="/metadata/annotation/link-bibliography/$escapedURL$" title="Bibliography of links cited in this page (forward citations). Lazily-transcluded version at footer of page for easier scrolling." class="include link-bibliography">[Bibliography of links/references used in page]</a>$endif$
         </section>$endif$
         </div> <!-- NOTE: unmatched, because it closes the opening div from the hakyll.hs $$body$$ Pandoc template -->
 
