--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2309,18 +2309,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -4316,6 +4316,14 @@ body.page-static-404 figure {
     background-color: var(--GW-body-background-color);
 }
 
+body.page-static-404 figure .figure-inner-wrapper {
+	padding: 0 1em;
+}
+
+body.page-static-404 figure figcaption {
+	margin-top: 0.5em;
+}
+
 /*=----------------=*/
 /*= /review/book =*/
 /*=----------------=*/
@@ -5212,14 +5220,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5360,7 +5368,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5820,14 +5828,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6730,7 +6738,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#question');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7296,7 +7304,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1699985112#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1699985093#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7371,7 +7379,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1699985112#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699985093#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
